--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,10 +1,13 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <meta name="description" content="Интернет-магазин постельного белья. Большой выбор качественного постельного белья с доставкой по всей стране. Удобный каталог и выгодные цены." />
+    <meta name="keywords" content="постельное белье, интернет-магазин, купить постельное белье, доставка по стране" />
+    <meta name="author" content="Ваше Имя или Название магазина" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <title>Интернет-магазин постельного белья</title>
   </head>
   <body>
     <div id="root"></div>
