--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Интернет-магазин постельного белья. Большой выбор качественного постельного белья с доставкой по всей стране. Удобный каталог и выгодные цены." />
     <meta name="keywords" content="постельное белье, интернет-магазин, купить постельное белье, доставка по стране" />
     <meta name="author" content="Ваше Имя или Название магазина" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/vite1.svg" />
     <title>Интернет-магазин постельного белья</title>
   </head>
   <body>
